--- a/index.html
+++ b/index.html
@@ -5,25 +5,33 @@
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <link rel="stylesheet" href="CSS/style.css" />
         <link rel="icon" type="image/x-icon" href="Images/favicon.ico" />
+        <script defer src="JS/solid.min.js"></script>
         <script defer src="JS/brands.min.js"></script>
         <script defer src="JS/fontawesome.js"></script>
     </head>
     <body>
         <header>
             <img src="Images/logo.jpeg" id="PortfolioLogo" alt="Portfolio Logo"/>
-            <span id="PortfolioTitle">My Portfolio</span>
+            <span id="PortfolioTitle">Mahesh Kumaar <span style="color: #ed8805;">Balaji</span></span>
             <ul id="NavigationMenu">
-                <li><a href="#Home" class="nav-link default" id="NavHome">HOME</a></li>
-                <li><a href="#AboutMe" class="nav-link" id="NavAboutMe">ABOUT ME</a></li>
-                <li><a href="#Projects" class="nav-link" id="NavProjects">PROJECTS</a></li>
-                <li><a href="#Contact" class="nav-link" id="NavContact">CONTACT</a></li>
+                <li><a href="#Home" class="nav-link default" id="NavHome"><i class="fa-solid fa-house"></i> Home</a></li>
+                <li><a href="#AboutMe" class="nav-link" id="NavAboutMe"><i class="fa-solid fa-user"></i> About Me</a></li>
+                <li><a href="#Projects" class="nav-link" id="NavProjects"><i class="fa-solid fa-laptop-code"></i> Projects</a></li>
+                <li><a href="#Contact" class="nav-link" id="NavContact"><i class="fa-solid fa-id-card"></i> Contact</a></li>
             </ul>
         </header>
         <div id="Home">
-            <h1 id="HomeCoverGreetings">HEY, I'M MAHESH KUMAAR <span style="color: #ed8805;">BALAJI</span>.</h1>
-            <p id="ShortDescription">Back end development, Workflow Automation and Lowcode development.</p>
-            <div id="ProjectsBtnParent">
-                <button id="btnNavToProjects" class="btn">Projects</button>
+            <div id="ProfilePictureSection">
+                <img src="Images/My-Picture.jpg" id="MyProfilePicture" alt="My Profile Picture" />
+            </div>
+            <div id="ProfileDescription">
+                <h1 id="HomeCoverGreetings">HEY, I'M <span style="color: #ed8805;">MAHESH</span>.</h1>
+                <p id="HomeCoverProfession">Web Developer</p>
+                <p id="ShortDescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <div id="DownloadResumeBtnParent">
+                    <button id="btnDownloadResume" class="btn"><i class="fa-solid fa-file-lines"></i> Download Resume</button>
+                    <a href="Files/My-Resume.pdf" download="MaheshKumaarBalaji_Resume" id="HiddenDownloadLink">Hidden Download</a>
+                </div>
             </div>
         </div>
         <div id="AboutMe">
@@ -36,7 +44,7 @@
                     <h3>Get to know me !</h3>
                     <p>I am a persistent, detail-oriented software engineer with 5 years of industry experience in orchestrating key business processes; and in the maintenance of business process workflows through corrective software maintenance. <br /><br />Career highlights include employing FMEA methodology for risk assessment on 100+ ETL workloads, thereby reducing the risk associated by 47%; and facilitating the automation of customer invoice processing in 16 countries across Europe and America. Some of my personal projects have been shown in the <b>Projects</b> section of this page.</p>
                     <div id="ContactBtnParent">
-                        <button id="btnNavToContact" class="btn">Contact</button>
+                        <button id="btnNavToContact" class="btn"><i class="fa-solid fa-id-card"></i> Contact</button>
                     </div>
                 </div>
                 <div id="MySkills">
@@ -86,7 +94,7 @@
                             <span id="UserMessageError" class="error-message"></span>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn" id="ContactFormSubmitBtn" disabled>Submit</button>
+                            <button type="submit" class="btn" id="ContactFormSubmitBtn" disabled><i class="fa-solid fa-floppy-disk"></i> Submit</button>
                         </div>
                     </form>
                 </div>
@@ -94,7 +102,7 @@
         </div>
         <footer>
             <span class="footer-span">Mahesh Kumaar <span style="color: #ed8805;">Balaji</span></span>
-            <span class="footer-span">Application Developer | Software Engineer</span>
+            <span class="footer-span">Web Developer</span>
             <div id="SocialIconsSection">
                 <a href="https://github.com/maheshkumaarbalaji" target="_blank" class="icons"><i class="fa-brands fa-github"></i></a>&nbsp;&nbsp;
                 <a href="https://www.linkedin.com/in/maheshkumaarbalaji/" target="_blank" class="icons"><i class="fa-brands fa-linkedin"></i></a>
@@ -114,10 +122,6 @@
                     document.getElementById(event.target.id).classList.toggle("default");
                 });
 
-                document.getElementById("btnNavToProjects").addEventListener('click',event => {
-                    document.getElementById("Projects").scrollIntoView(true);
-                });
-
                 document.getElementById("btnNavToContact").addEventListener('click',event => {
                     document.getElementById("Contact").scrollIntoView(true);
                 });
@@ -129,6 +133,10 @@
                     let UserMessage = document.getElementById("UserMessage").value.trim();
                     window.location.href = "mailto:maheshkumaar.balaji@outlook.com?subject=A Message from " + UserDisplayName + "<" + UserEmail + ">" + "&body=" + UserMessage;
                     ResetForm();
+                });
+
+                document.getElementById("btnDownloadResume").addEventListener('click',event => {
+                    document.getElementById("HiddenDownloadLink").click();
                 });
             };
 
