Adjusted height  settings for Home and About

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#Projects" class="nav-link" id="NavProjects"><i class="fa-solid fa-laptop-code"></i> Projects</a></li>
                 <li><a href="#Contact" class="nav-link" id="NavContact"><i class="fa-solid fa-id-card"></i> Contact</a></li>
             </ul>
+            <button type="button" id="MenuForMobileBtn"><i class="fa-solid fa-bars"></i></button>
         </header>
         <div id="Home">
             <div id="ProfilePictureSection">
