Updated logo and favicon.ico

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <img src="Images/logo.jpeg" id="PortfolioLogo" alt="Portfolio Logo"/>
+            <img src="Images/logo.png" id="PortfolioLogo" alt="Portfolio Logo"/>
             <span id="PortfolioTitle">Mahesh Kumaar <span style="color: #ed8805;">Balaji</span></span>
             <div id="NavMenuForMobile">
                 <button type="button" id="MenuForMobileBtn"><i class="fa-solid fa-bars"></i></button>
@@ -33,7 +33,7 @@
             <div id="ProfileDescription">
                 <h1 id="HomeCoverGreetings">HEY, I'M <span style="color: #ed8805;">MAHESH</span>.</h1>
                 <p id="HomeCoverProfession">Software Engineer</p>
-                <p id="ShortDescription">A driven and curious software engineer aiming to provide tailored and innovative solutions to diverse clients.</p>
+                <p id="ShortDescription">A driven and curious person aiming to provide tailored and innovative solutions to diverse clients.</p>
                 <div id="DownloadResumeBtnParent">
                     <button id="btnDownloadResume" class="btn"><i class="fa-solid fa-file-lines"></i> Download Resume</button>
                     <a href="Files/My-Resume.pdf" download="MaheshKumaarBalaji_Resume" id="HiddenDownloadLink">Hidden Download</a>
